--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,9 +5,14 @@
 #main {
   @include container;
   @include clearfix;
+  /* initialization
   margin-top: 2em;
   padding-left: 1em;
   padding-right: 1em;
+  */
+  margin-top: 3em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   animation: intro 0.3s both;
   animation-delay: 0.35s;
 
@@ -18,6 +23,11 @@
 
 .page {
   @include breakpoint($large) {
+    /* initialization
+    @include span(10 of 12 last);
+    @include prefix(0.5 of 12);
+    @include suffix(2 of 12);
+    */
     @include span(9.5 of 12 last);
     @include prefix(1 of 12);
     @include suffix(2 of 12);
