--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -152,7 +152,7 @@
     .page__meta,
     .page__lead,
     .btn {
-      color: #fff;
+      color: #928686;
       text-shadow: 1px 1px 4px rgba(#000, 0.5);
     }
 
@@ -182,7 +182,7 @@
   right: 0;
   margin: 0 auto;
   padding: 2px 5px;
-  color: #fff;
+  color: #25602f;
   font-family: $caption-font-family;
   font-size: $type-size-7;
   background: #000;
