--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -28,7 +28,7 @@
     @include prefix(0.5 of 12);
     @include suffix(2 of 12);
     */
-    @include span(9.5 of 12 last);
+    @include span(10 of 12 last);
     @include prefix(1 of 12);
     @include suffix(2 of 12);
   }
@@ -152,7 +152,7 @@
     .page__meta,
     .page__lead,
     .btn {
-      color: #928686;
+      color: #fff;
       text-shadow: 1px 1px 4px rgba(#000, 0.5);
     }
 
@@ -182,7 +182,7 @@
   right: 0;
   margin: 0 auto;
   padding: 2px 5px;
-  color: #25602f;
+  color: #ffffff;
   font-family: $caption-font-family;
   font-size: $type-size-7;
   background: #000;
