--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -251,7 +251,7 @@
     padding-top: 2px;
     padding-bottom: 2px;
     color: inherit;
-    font-size: $type-size-10;
+    font-size: 32px;
     text-decoration: none;
 
     &:hover {
