--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -67,7 +67,7 @@ $body-color                 : #fff;
 $background-color           : #fff;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : #24292e;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
